--- a/public/style.css
+++ b/public/style.css
@@ -507,7 +507,7 @@ input[type=number] {
 
 /* Conteúdo do modal */
 .modal-content {
-  background-color: #fff;
+  background-color: #000000;
   margin: 15% auto; /* Centralizado vertical e horizontal */
   padding: 20px 30px;
   border: 2px solid #000;
