--- a/public/fichas-manager.css
+++ b/public/fichas-manager.css
@@ -67,7 +67,7 @@
 .lista-fichas li button.btn-excluir {
   background: transparent;
   border: none;
-  color: red;
+  color: rgb(0, 0, 0);
   font-weight: 900;
   font-size: 1.1rem;
   cursor: pointer;
