--- a/public/fichas-manager.css
+++ b/public/fichas-manager.css
@@ -3,13 +3,13 @@
   padding: 15px 20px;
   margin-bottom: 25px;
   background-color: #f5f5f5;
-  font-family: 'Georgia', serif;
+  font-family:  "Jim Nightshade", cursive;
 }
 
 .fichas-manager h2 {
-  font-family: 'Courier New', monospace;
-  font-weight: 900;
-  font-size: 1.8rem;
+  font-family:  "Jim Nightshade", cursive;
+  font-weight: 700;
+  font-size: 2rem;
   margin-bottom: 15px;
   letter-spacing: 0.1em;
   text-align: center;
@@ -30,7 +30,7 @@
   border-bottom: 1px solid #ccc;
   cursor: pointer;
   font-weight: 600;
-  font-size: 1rem;
+  font-size: 1.3rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -48,10 +48,11 @@
 
 .btn-nova-ficha {
   display: block;
+  font-family:  "Jim Nightshade", cursive;
   width: 100%;
   padding: 10px 0;
   font-weight: 900;
-  font-size: 1.1rem;
+  font-size: 1.5rem;
   cursor: pointer;
   background-color: #000;
   color: #fff;
